Fix on mobile button

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -7,12 +7,7 @@
 .form-content-container {
   display: flex;
 }
-/*
-.contact-img {
-  max-width: 100%;
-  height: auto;
-}
-*/
+
 .contact-form {
   align-items: center;
   padding-top: 10%;
@@ -166,4 +161,38 @@
   font-size: 12px;
   margin-top: 0;
   color: orange;
+}
+
+@media screen and (max-width: 768px) {
+
+  .form-content-container {
+    display: block;
+  }
+
+  .contact-form {
+    width: 100%;
+  }
+
+  .label-float {
+    width: 100%;
+  }
+
+  .label-float input, .label-float textarea {
+    width: 100%;
+  }
+
+  .form-wrapper-2col {
+    display: block;
+  }
+
+  .form-wrapper-2col .label-float input {
+    margin-left: 0;
+    width: 175px;
+  }
+  
+  .form-wrapper-2col .label-float label {
+    padding: 0;
+    margin-left: 0;
+  }
+
 }
